[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/level.gd" type="Script" id=1]
[ext_resource path="res://sprites/black.png" type="Texture" id=2]
[ext_resource path="res://scenes/grid.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game_gui.tscn" type="PackedScene" id=4]

[node name="level" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="grid" parent="." instance=ExtResource( 3 )]

[node name="game_gui" parent="." instance=ExtResource( 4 )]

[node name="Timer_time" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Timer_gameover" type="Timer" parent="."]

process/pause_mode = 2
process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[connection signal="timeout" from="Timer_time" to="." method="_on_Timer_time_timeout"]

[connection signal="timeout" from="Timer_gameover" to="." method="_on_Timer_gameover_timeout"]


